welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:6: error: reassignment to val
    a=true
     ^posNeg:8: error: reassignment to val
    a=true
     ^posNeg:10: error: reassignment to val
    a=false
     ^posNeg:12: error: type mismatch;
 found   : Int
 required: Boolean
  return a
         ^